--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Spotify Music</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="web.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='css/web.css') }}">
 </head>
 
 <body>
@@ -92,9 +92,9 @@
     </div>
   </div>
 
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="app.js"></script>
-
 
 </body>
 
