--- a/templates/index.html
+++ b/templates/index.html
@@ -31,11 +31,12 @@
         <div class="panel panel-primary" id="metaPanel">
           <div class="panel-heading">
             <h3 class="panel-title">Song Features Key</h3>
-            <h4 class="panel-body">Mode</h4>
-            <p> Major modality represented by 1 and minor is 0.</p>
-            <h4 class="panel-body">Time Signature</h4>
+            <h5 padding-top:30px></h5>
+            <h5 class="panel-title">Mode</h5>
+            <p>Major modality represented by 1 and minor is 0.</p>
+            <h6 class="panel-body">Time Signature</h6>
             <p> How many beats are in each bar of music.</p>
-            <h4 class="panel-body">Key</h4>
+            <h7 class="panel-body">Key</h4>
             <p> Pitch Class notation:
               0 C (also B♯, Ddouble flat) do
               1 C♯, D♭ (also Bdouble sharp)
@@ -49,26 +50,26 @@
               9 A (also Gdouble sharp, Bdouble flat) la
               10, t or A A♯, B♭ (also Cdouble flat)
               11, e or B B (also Adouble sharp, C♭) ti </p>
-            <h4 class="panel-body">Acousticness</h4>
+            <h8 class="panel-body">Acousticness</h4>
             <p> 1.0 represents high confidense the track is acoustic.</p>
-            <h4 class="panel-body">Danceability</h4>
+            <h9 class="panel-body">Danceability</h4>
             <p> A value of 0.0 is least danceable and 1.0 is most danceable.</p>
-            <h4 class="panel-body">Energy</h4>
+            <h10 class="panel-body">Energy</h4>
             <p> Energy is a measure from 0.0 to 1.0 and represents a perceptual measure of intensity and activity</p>
-            <h4 class="panel-body">Instrumentalness</h4>
+            <h11 class="panel-body">Instrumentalness</h4>
             <p> The closer the instrumentalness value is to 1.0, the greater likelihood the track contains no vocal
               content. </p>
-            <h4 class="panel-body">Liveness</h4>
+            <h12 class="panel-body">Liveness</h4>
             <p> Detects presence of live audience in recording. Value above 0.8 provides strong likelihood that track
               was live.</p>
-            <h4 class="panel-body">Loudness</h4>
+            <h13 class="panel-body">Loudness</h4>
             <p> Overall loudness of a track in decibels (dB)</p>
-            <h4 class="panel-body">Speechiness</h4>
+            <h14 class="panel-body">Speechiness</h4>
             <p> Detects presence of spoken words in a track. The more exclusively speech-like the closer to 1.0.</p>
-            <h4 class="panel-body">Valence</h4>
+            <h15 class="panel-body">Valence</h4>
             <p> Tracks with high valence sound more positive (e.g. happy, cheerful, euphoric), while tracks with low
               valence sound more negative (e.g. sad, depressed, angry)</p>
-            <h4 class="panel-body">Tempo</h4>
+            <h16 class="panel-body">Tempo</h4>
             <p> Estimated tempo of a track in beats per minute (BPM)</p>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
