html adding in key for song features

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,18 +37,18 @@
             <p> How many beats are in each bar of music.</p>
             <h4 class="panel-body">Key</h4>
             <p> Pitch Class notation:
-              0 C (also B♯, Ddouble flat) do
-              1 C♯, D♭ (also Bdouble sharp)
-              2 D (also Cdouble sharp, Edouble flat) re
-              3 D♯, E♭ (also Fdouble flat)
-              4 E (also Ddouble sharp, F♭) mi
-              5 F (also E♯, Gdouble flat) fa
-              6 F♯, G♭ (also Edouble sharp)
-              7 G (also Fdouble sharp, Adouble flat) sol
-              8 G♯, A♭
-              9 A (also Gdouble sharp, Bdouble flat) la
-              10, t or A A♯, B♭ (also Cdouble flat)
-              11, e or B B (also Adouble sharp, C♭) ti </p>
+              0: C (also B♯, Ddouble flat) do
+              1: C♯, D♭ (also Bdouble sharp)
+              2: D (also Cdouble sharp, Edouble flat) re
+              3: D♯, E♭ (also Fdouble flat)
+              4: E (also Ddouble sharp, F♭) mi
+              5: F (also E♯, Gdouble flat) fa
+              6: F♯, G♭ (also Edouble sharp)
+              7: G (also Fdouble sharp, Adouble flat) sol
+              8: G♯, A♭
+              9: A (also Gdouble sharp, Bdouble flat) la
+              10: t or A A♯, B♭ (also Cdouble flat)
+              11: e or B B (also Adouble sharp, C♭) ti </p>
             <h4 class="panel-body">Acousticness</h4>
             <p> 1.0 represents high confidense the track is acoustic.</p>
             <h4 class="panel-body">Danceability</h4>
