--- a/static/css/web.css
+++ b/static/css/web.css
@@ -1,5 +1,5 @@
 .jumbotron {
-    color: #FFFFF0;
+    color: #008000;
 	font-family: Garamond;
     background-image: url("Images/SpotifyLogo3.png");
     background-color: #0e0d0d;
