--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
       </div>
 
       <div class="col-md-5">
-        <div id="bubble"></div>
+        <div id="bar"></div>
       </div>
 
       <div class="col-md-5">
@@ -93,9 +93,10 @@
     </div>
   </div>
 
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 
 </body>
 
