--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <div id="bar"></div>
+        <div id="bubble"></div>
       </div>
     </div>
   </div>
