--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,9 @@
             <h5 padding-top:30px></h5>
             <h5 class="panel-title">Mode</h5>
             <p>Major modality represented by 1 and minor is 0.</p>
-            <h6 class="panel-body">Time Signature</h6>
+            <h6 class="panel-title">Time Signature</h6>
             <p> How many beats are in each bar of music.</p>
-            <h7 class="panel-body">Key</h4>
+            <h7 class="panel-title">Key</h7>
             <p> Pitch Class notation:
               0 C (also B♯, Ddouble flat) do
               1 C♯, D♭ (also Bdouble sharp)
@@ -50,29 +50,28 @@
               9 A (also Gdouble sharp, Bdouble flat) la
               10, t or A A♯, B♭ (also Cdouble flat)
               11, e or B B (also Adouble sharp, C♭) ti </p>
-            <h8 class="panel-body">Acousticness</h4>
+            <h8 class="panel-title">Acousticness</h8>
             <p> 1.0 represents high confidense the track is acoustic.</p>
-            <h9 class="panel-body">Danceability</h4>
+            <h9 class="panel-title">Danceability</h9>
             <p> A value of 0.0 is least danceable and 1.0 is most danceable.</p>
-            <h10 class="panel-body">Energy</h4>
+            <h10 class="panel-title">Energy</h10>
             <p> Energy is a measure from 0.0 to 1.0 and represents a perceptual measure of intensity and activity</p>
-            <h11 class="panel-body">Instrumentalness</h4>
+            <h11 class="panel-title">Instrumentalness</h11>
             <p> The closer the instrumentalness value is to 1.0, the greater likelihood the track contains no vocal
               content. </p>
-            <h12 class="panel-body">Liveness</h4>
+            <h12 class="panel-title">Liveness</h12>
             <p> Detects presence of live audience in recording. Value above 0.8 provides strong likelihood that track
               was live.</p>
-            <h13 class="panel-body">Loudness</h4>
+            <h13 class="panel-title">Loudness</h13>
             <p> Overall loudness of a track in decibels (dB)</p>
-            <h14 class="panel-body">Speechiness</h4>
+            <h14 class="panel-title">Speechiness</h14>
             <p> Detects presence of spoken words in a track. The more exclusively speech-like the closer to 1.0.</p>
-            <h15 class="panel-body">Valence</h4>
+            <h15 class="panel-title">Valence</h15>
             <p> Tracks with high valence sound more positive (e.g. happy, cheerful, euphoric), while tracks with low
               valence sound more negative (e.g. sad, depressed, angry)</p>
-            <h16 class="panel-body">Tempo</h4>
+            <h16 class="panel-title">Tempo</h16>
             <p> Estimated tempo of a track in beats per minute (BPM)</p>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
 
@@ -80,13 +79,6 @@
         <div id="bar"></div>
       </div>
 
-      <div class="col-md-5">
-        <div id="gauge" style="width: 450px; height: 400px;"></div>
-
-      </div>
-    </div>
-
-    <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
       </div>
