--- a/static/css/web.css
+++ b/static/css/web.css
@@ -11,10 +11,11 @@
 }
 
 #metaPanel {
-	font-size: smaller;
+	font-size: medium;
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	background-color: #008000;
 	color: #FFFFF0;
+	padding-right: 50px
 }
 
 #metaPanel .panel-header {
@@ -22,7 +23,7 @@
 }
 
 #selDataset {
-	padding: 7px;
+	padding: 30px;
 	color: black;
 }
 
