--- a/static/css/web.css
+++ b/static/css/web.css
@@ -29,7 +29,7 @@
 
 #samplePanel {
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-	text-align: center;
+	text-align: justify;
 	color: #FFFFF0;
 	background-color: #008000;
 	padding-right: 100px
