--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
       <div class="col-md-2">
         <div class="well" id="samplePanel">
-          <h5>Select Spotify Music Info:</h5>
+          <h5 class="panel-title">Select Spotify Music Info</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
 
@@ -77,8 +77,10 @@
 
       <div class="col-md-5">
         <div id="bar"></div>
+        <div padding-left: 400px>
       </div>
 
+      <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
       </div>
