--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
       <div class="col-md-2">
         <div class="well" id="samplePanel">
-          <h5 class="panel-title">Select Spotify Music Info</h5>
+          <h5 class="panel-title">Spotify Music Info</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
 
@@ -79,10 +79,12 @@
         <div id="bar"></div>
         <div padding-left: 400px>
       </div>
+    </div>
 
       <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-7">
         <div id="bubble"></div>
+        <div padding-left: 400px>
       </div>
     </div>
   </div>
