--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Spotify Music</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css">
   <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='css/web.css') }}">
 </head>
 
@@ -81,6 +82,7 @@
       </div>
     </div>
 
+
       <div class="row">
 
       <div class="col-md-7">
@@ -88,7 +90,16 @@
         <div padding-left: 400px>
       </div>
     </div>
-  </div>
+
+    <div class="row">
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <form class="form-inline">
+          <a role="button" class="btn btn-outline-primary" href="project2-spotify/sabrina/index.html">Map</a>
+      </form>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
 
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -97,4 +108,4 @@
 
 </body>
 
-</html>
+</html
