--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-
+  <li class="nav-item">
+    <a class="nav-link" href="map.html">MAP</a>
+  </li> 
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
