--- a/templates/index.html
+++ b/templates/index.html
@@ -85,33 +85,33 @@
                 </div>
             </div>
 
-      <!-- <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <!-- <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <form class="form-inline"> -->
-            <a role="button" class="btn btn-outline-primary" href="project2-spotify/sabrina/index.html">Map</a>
-        <!-- </form>
+            <a role="button" class="btn btn-outline-primary" href="/map">Map</a>
+            <!-- </form>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button> --> -->
-
-    <div class="row">
-            <div class="col-md-5">
-                <div id="bar"></div>
-                <div padding-left: 400px>
-                </div>
-            </div>
+        </button> -->-->
 
             <div class="row">
-
-                <div class="col-md-7">
-                    <div id="bubble"></div>
+                <div class="col-md-5">
+                    <div id="bar"></div>
                     <div padding-left: 400px>
                     </div>
                 </div>
-            </div>
 
-            <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-            <script src="https://d3js.org/d3.v5.min.js"></script>
-            <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+                <div class="row">
+
+                    <div class="col-md-7">
+                        <div id="bubble"></div>
+                        <div padding-left: 400px>
+                        </div>
+                    </div>
+                </div>
+
+                <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+                <script src="https://d3js.org/d3.v5.min.js"></script>
+                <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 
 </body>
